stretched background for icon button fix

--- a/src/iconButton/iconButton.css
+++ b/src/iconButton/iconButton.css
@@ -12,7 +12,7 @@
 }
 
 div {
-    display: flex;
+    display: inline-block;
     border-radius: 100%;
     background-color: rgba(255,255,255, .08);
     justify-content: center;
